--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -28,6 +28,8 @@
           %ul.nav.navbar-nav
             %li.active
               %a{:href => "#"} Home
+            %li= link_to  "Stock Templates", stock_templates_path
+            %li= link_to  "Template Fields", template_fields_path
             %li
               %a{:href => "#about"} About
             %li
