--- a/app/views/template_fields/index.html.haml
+++ b/app/views/template_fields/index.html.haml
@@ -10,6 +10,7 @@
       %tr
         %th Name
         %th Unit
+        %th Field Type
         %th Counter
         %th Stock template
         %th
@@ -22,7 +23,8 @@
           %td= template_field.name
           %td= template_field.unit
           %td= template_field.counter
-          %td= template_field.stock_template
+          %td= template_field.field_type
+          %td= template_field.stock_template.name
           %td= link_to 'Show', template_field
           %td= link_to 'Edit', edit_template_field_path(template_field)
           %td= link_to 'Destroy', template_field, :data => { confirm: 'Are you sure?' }, :method => :delete
