--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -23,7 +23,7 @@
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          = link_to "Project name", "#", :class => "navbar-brand"
+          = link_to "Stock Monitor", root_path, :class => "navbar-brand"
         .collapse.navbar-collapse
           %ul.nav.navbar-nav
             %li.active
