--- a/app/views/stock_templates/new.html.haml
+++ b/app/views/stock_templates/new.html.haml
@@ -2,6 +2,6 @@
   = link_to stock_templates_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  %h1 New stock_template
+  %h1 New Stock Template
 
 = render 'form'
