--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -29,7 +29,7 @@
             %li
               %a{:href => "#"} Home
             %li= link_to  "Stocks", stocks_path
-            %li= link_to  "Stock Templates", stock_templates_path
+            %li= link_to  "Stock Templates", products_path
             %li= link_to  "Template Fields", template_fields_path
             %li
               %a{:href => "#about"} About
