--- a/app/views/stocks/_form.html.haml
+++ b/app/views/stocks/_form.html.haml
@@ -8,7 +8,7 @@
         - @stock.errors.full_messages.each do |msg|
           %li= msg
 
-  %h2= @stock.stock_template.name
+  %h2= @stock.product.name
 
   .form-group
     .col-sm-offset-2.col-sm-10
