--- a/app/views/template_fields/show.html.haml
+++ b/app/views/template_fields/show.html.haml
@@ -15,4 +15,4 @@
   %dt Counter:
   %dd= @template_field.counter
   %dt Stock template:
-  %dd= @template_field.stock_template
+  %dd= @template_field.product
