--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = link_to stock_templates_path, :class => 'btn btn-default' do
+  = link_to products_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
   %h1 New Stock Template
