--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -1,6 +1,6 @@
 .page-header
   = form_tag new_stock_path, method: :get do
-    = select_tag :stock_template_id, options_for_select(StockTemplate.all.collect{|x| [x.name, x.id]})
+    = select_tag :product_id, options_for_select(Product.all.collect{|x| [x.name, x.id]})
     = submit_tag 'New Stock', :class => 'btn btn-primary' do
       %span.glyphicon.glyphicon-plus
       New Stock
@@ -18,7 +18,7 @@
     %tbody
       - @stocks.each do |stock|
         %tr
-          %td= stock.stock_template
+          %td= stock.product
           %td= link_to 'Show', stock
           %td= link_to 'Edit', edit_stock_path(stock)
           %td= link_to 'Destroy', stock, :data => { confirm: 'Are you sure?' }, :method => :delete
