--- a/app/views/template_fields/_form.html.haml
+++ b/app/views/template_fields/_form.html.haml
@@ -9,9 +9,9 @@
           %li= msg
 
   .form-group
-    = f.label :stock_template, :class => 'col-sm-2 control-label'
+    = f.label :product, :class => 'col-sm-2 control-label'
     .col-sm-10
-      = f.select :stock_template_id, options_from_collection_for_select(StockTemplate.all, :id, :name),  :class => 'col-sm-2 form-control'
+      = f.select :product_id, options_from_collection_for_select(Product.all, :id, :name),  :class => 'col-sm-2 form-control'
   .form-group
     = f.label :name, :class => 'col-sm-2 control-label'
     .col-sm-10
