--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -1,7 +1,7 @@
 .page-header
   = link_to new_product_path, :class => 'btn btn-primary' do
     %span.glyphicon.glyphicon-plus
-    New Stock template
+    New Product
   %h1 Listing Products
 
 .table-responsive
