--- a/app/views/products/new.html.haml
+++ b/app/views/products/new.html.haml
@@ -2,6 +2,6 @@
   = link_to products_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  %h1 New Stock Template
+  %h1 New Product
 
 = render 'form'
