--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -10,7 +10,7 @@
   %table.table.table-striped.table-bordered.table-hover
     %thead
       %tr
-        %th Stock template
+        %th Product
         %th
         %th
         %th
