--- a/app/views/template_fields/index.html.haml
+++ b/app/views/template_fields/index.html.haml
@@ -12,7 +12,7 @@
         %th Unit
         %th Field Type
         %th Counter
-        %th Stock template
+        %th Product
         %th
         %th
         %th
