--- a/app/views/template_fields/show.html.haml
+++ b/app/views/template_fields/show.html.haml
@@ -14,5 +14,5 @@
   %dd= @template_field.unit
   %dt Counter:
   %dd= @template_field.counter
-  %dt Stock template:
+  %dt Product:
   %dd= @template_field.product
