--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -30,7 +30,7 @@
               %a{:href => "#"} Home
             %li= link_to  "Stocks", stocks_path
             %li= link_to  "Products", products_path
-            %li= link_to  "Template Fields", template_fields_path
+            %li= link_to  "Product Fields", product_fields_path
             %li
               %a{:href => "#about"} About
             %li
