--- a/app/views/stock_fields/_form.html.haml
+++ b/app/views/stock_fields/_form.html.haml
@@ -25,9 +25,9 @@
     .col-sm-10
       = f.text_area :text_value, :class => 'form-control'
   .form-group
-    = f.label :template_field, :class => 'col-sm-2 control-label'
+    = f.label :product_field, :class => 'col-sm-2 control-label'
     .col-sm-10
-      = f.text_field :template_field, :class => 'form-control'
+      = f.text_field :product_field, :class => 'form-control'
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit :class => 'btn btn-primary'
