--- a/app/views/stock_fields/show.html.haml
+++ b/app/views/stock_fields/show.html.haml
@@ -16,5 +16,5 @@
   %dd= @stock_field.string_value
   %dt Text value:
   %dd= @stock_field.text_value
-  %dt Template field:
-  %dd= @stock_field.template_field
+  %dt Product field:
+  %dd= @stock_field.product_field
