--- a/app/views/stocks/_form.html.haml
+++ b/app/views/stocks/_form.html.haml
@@ -10,6 +10,16 @@
 
   %h2= @stock.product.name
 
+
+  = f.hidden_field :product_id
+  = f.fields_for :stock_fields do |ff|
+    = ff.hidden_field :product_field_id
+
+    - case ff.object.product_field.field_type
+    - when "float"
+      = ff.label :float_value, ff.object.product_field.name
+      = ff.text_field :float_value
+      (Float)
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit :class => 'btn btn-primary'
