--- a/app/views/product_fields/_form.html.haml
+++ b/app/views/product_fields/_form.html.haml
@@ -9,7 +9,7 @@
           %li= msg
 
   .form-group
-    = f.label :product, :class => 'col-sm-2 control-label'
+    = f.label :product_id, "Product", :class => 'col-sm-2 control-label'
     .col-sm-10
       = f.select :product_id, options_from_collection_for_select(Product.all, :id, :name),  :class => 'col-sm-2 form-control'
   .form-group
