--- a/app/views/product_fields/index.html.haml
+++ b/app/views/product_fields/index.html.haml
@@ -24,7 +24,7 @@
           %td= product_field.unit
           %td= product_field.counter
           %td= product_field.field_type
-          %td= product_field.product.name
+          %td= product_field.product.try(:name)
           %td= link_to 'Show', product_field
           %td= link_to 'Edit', edit_product_field_path(product_field)
           %td= link_to 'Destroy', product_field, :data => { confirm: 'Are you sure?' }, :method => :delete
