--- a/app/views/products/index.html.haml
+++ b/app/views/products/index.html.haml
@@ -16,7 +16,7 @@
     %tbody
       - @products.each do |product|
         %tr.product_item
-          %td= product.name
+          %td= link_to product.name, product_stocks_path(product)
           %td= link_to 'Show', product
           %td= link_to 'Edit', edit_product_path(product)
           %td= link_to 'Destroy', product, :data => { confirm: 'Are you sure?' }, :method => :delete
