--- a/app/views/stocks/_form.html.haml
+++ b/app/views/stocks/_form.html.haml
@@ -15,15 +15,18 @@
   = f.fields_for :stock_fields do |ff|
     = ff.hidden_field :product_field_id
 
+    .form-group
     - case ff.object.product_field.field_type
     - when "float"
-      = ff.label :float_value, ff.object.product_field.name
-      = ff.text_field :float_value
-      (Float)
+      = ff.label :float_value, ff.object.product_field.name, class: 'col-sm-2 control-label'
+      .col-sm-10
+        = ff.text_field :float_value
+        (Float)
     - when "string"
-      = ff.label :string_value, ff.object.product_field.name
-      = ff.text_field :string_value
-      (String)
+      = ff.label :string_value, ff.object.product_field.name, class: 'col-sm-2 control-label'
+      .col-sm-10
+        = ff.text_field :string_value
+        (String)
   .form-group
     .col-sm-offset-2.col-sm-10
       = f.submit :class => 'btn btn-primary'
