--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = link_to stocks_path, :class => 'btn btn-default' do
+  = link_to product_stocks_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
   = link_to edit_stock_path(@stock), :class => 'btn btn-primary' do
