--- a/app/views/stocks/_form.html.haml
+++ b/app/views/stocks/_form.html.haml
@@ -1,4 +1,4 @@
-= form_for @stock, :html => { :class => "form-horizontal" } do |f|
+= form_for [@product, @stock], :html => { :class => "form-horizontal" } do |f|
   -if @stock.errors.any?
     .alert.alert-danger.alert-dismissable
       %button.close{"aria-hidden" => "true", "data-dismiss" => "alert", :type => "button"} &times;
