--- a/app/views/stocks/edit.html.haml
+++ b/app/views/stocks/edit.html.haml
@@ -1,8 +1,8 @@
 .page-header
-  = link_to stocks_path, :class => 'btn btn-default' do
+  = link_to product_stocks_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  = link_to @stock, :class => 'btn btn-primary' do
+  = link_to [@product, @stock], :class => 'btn btn-primary' do
     %span.glyphicon.glyphicon-info-sign
     Show
   %h1 Editing stock
