--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -17,6 +17,6 @@
       - @stocks.each do |stock|
         %tr
           %td= stock.product
-          %td= link_to 'Show', stock
-          %td= link_to 'Edit', edit_stock_path(stock)
-          %td= link_to 'Destroy', stock, :data => { confirm: 'Are you sure?' }, :method => :delete
+          %td= link_to 'Show', product_stock_path(@product,stock)
+          %td= link_to 'Edit', edit_product_stock_path(@product,stock)
+          %td= link_to 'Destroy', product_stock_path(@product,stock), :data => { confirm: 'Are you sure?' }, :method => :delete
