--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -2,7 +2,7 @@
   = link_to product_stocks_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
-  = link_to edit_stock_path(@stock), :class => 'btn btn-primary' do
+  = link_to edit_product_stock_path, :class => 'btn btn-primary' do
     %span.glyphicon.glyphicon-pencil
     Edit
   %h1 Show stock
