--- a/app/views/stocks/new.html.haml
+++ b/app/views/stocks/new.html.haml
@@ -1,5 +1,5 @@
 .page-header
-  = link_to stocks_path, :class => 'btn btn-default' do
+  = link_to product_stocks_path, :class => 'btn btn-default' do
     %span.glyphicon.glyphicon-list-alt
     Back
   %h1 New stock
