--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -11,6 +11,10 @@
   %dt Product:
   %dd= @stock.product
 
+  =link_to new_deposit_path, :class => 'btn btn-primary' do
+    %span.glyphicon.glyphicon-plus
+    Deposit Stock
+
   %table.table
     %tr
       %th Field
