--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -8,8 +8,10 @@
   %table.table.table-striped.table-bordered.table-hover
     %thead
       %tr
+        %th ID
         - @product.product_fields.each do |product_field|
           %th= product_field.name
+        %th
         %th
         %th
         %th
@@ -17,6 +19,7 @@
     %tbody
       - @stocks.each do |stock|
         %tr
+          %td= link_to stock.id, product_stock_path(@product,stock)
           - @product.product_fields.each do |product_field|
             %td= stock.stock_fields.where(product_field: product_field).first.try(:string_value) || stock.stock_fields.where(product_field: product_field).first.try(:float_value)
           %td= stock.product
