Stock quantity feature spec.

--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -15,6 +15,11 @@
     %span.glyphicon.glyphicon-plus
     Deposit Stock
 
+  %h2
+    Remaining Quantity
+    = @stock.remaining_quantity
+    {{unit}}
+
   %table.table
     %tr
       %th Field
