--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -34,7 +34,7 @@
         %td= stock_field.product_field.unit
 
 .row
-  .col-sm-6
+  #deposits.col-sm-6
     %h3 Deposits
 
     .table-responsive
@@ -64,7 +64,7 @@
 
 
 
-  .col-sm-6
+  #withdraws.col-sm-6
     %h3 Withdraws
 
     .table-responsive
