--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -12,6 +12,9 @@
   %span.glyphicon.glyphicon-plus
   Deposit Stock
 
+=link_to new_withdraw_path(stock_id: @stock.id), :class => 'btn btn-primary' do
+  %span.glyphicon.glyphicon-plus
+  Withdraw Stock
 
 %h2
   Remaining Quantity
