--- a/app/views/stocks/show.html.haml
+++ b/app/views/stocks/show.html.haml
@@ -19,7 +19,7 @@
 %h2
   Remaining Quantity
   = @stock.remaining_quantity
-  {{unit}}
+  = @stock.quantity_unit
 
 %h4 Product #{@stock.product.name}
 %table.table
