--- a/app/views/stocks/index.html.haml
+++ b/app/views/stocks/index.html.haml
@@ -11,7 +11,7 @@
         %th ID
         - @product.product_fields.each do |product_field|
           %th= product_field.name
-        %th
+        %th Product Type
         %th
         %th
         %th
